--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,7 @@
 {
     "/js/app.js": "/js/app.js",
+    "/css/garden-reports.css": "/css/garden-reports.css",
     "/css/app.css": "/css/app.css",
-    "/assets/css/soft-ui-dashboard.css": "/assets/css/soft-ui-dashboard.css"
+    "/assets/css/soft-ui-dashboard.css": "/assets/css/soft-ui-dashboard.css",
+    "/assets/js/soft-ui-dashboard.min.js": "/assets/js/soft-ui-dashboard.min.js"
 }
