Add GitHub Actions workflow for cPanel deployment
- Add deploy.yml workflow for automatic deployment
- Add .env.production.example template for production config
- Update .gitignore to include production env template

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /vendor
 .env
 .env.backup
+!.env.production.example
 .phpunit.result.cache
 docker-compose.override.yml
 Homestead.json
@@ -13,6 +14,8 @@ npm-debug.log
 yarn-error.log
 /.idea
 /.vscode
+
+
 
 
 
