--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Setup PHP
       uses: shivammathur/setup-php@v2
       with:
-        php-version: '8.1'  # Cambia según tu versión de PHP
+        php-version: '8.2'  # Laravel 11 requiere PHP 8.2+
         extensions: mbstring, bcmath, gd, mysql, zip
 
     - name: Install Composer dependencies
