--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,61 @@ jobs:
       run: composer install --no-dev --optimize-autoloader
 
     - name: Setup environment
-      run: cp .env.production.example .env
+      run: |
+        cat > .env << EOF
+        APP_NAME=Cesped365
+        APP_ENV=production
+        APP_KEY=
+        APP_DEBUG=false
+        APP_URL=https://cesped365.com
+
+        LOG_CHANNEL=stack
+        LOG_DEPRECATIONS_CHANNEL=null
+        LOG_LEVEL=error
+
+        DB_CONNECTION=mysql
+        DB_HOST=localhost
+        DB_PORT=3306
+        DB_DATABASE=cespvcyi_cesped365_d
+        DB_USERNAME=cespvcyi_cespvcyi_user
+        DB_PASSWORD=Gojira2019!
+
+        BROADCAST_DRIVER=log
+        CACHE_DRIVER=file
+        FILESYSTEM_DRIVER=local
+        QUEUE_CONNECTION=sync
+        SESSION_DRIVER=file
+        SESSION_LIFETIME=120
+
+        MEMCACHED_HOST=127.0.0.1
+
+        REDIS_HOST=127.0.0.1
+        REDIS_PASSWORD=null
+        REDIS_PORT=6379
+
+        MAIL_MAILER=smtp
+        MAIL_HOST=mail.cesped365.com
+        MAIL_PORT=587
+        MAIL_USERNAME=info@cesped365.com
+        MAIL_PASSWORD=tu_password_email
+        MAIL_ENCRYPTION=tls
+        MAIL_FROM_ADDRESS=info@cesped365.com
+        MAIL_FROM_NAME=Cesped365
+
+        AWS_ACCESS_KEY_ID=
+        AWS_SECRET_ACCESS_KEY=
+        AWS_DEFAULT_REGION=us-east-1
+        AWS_BUCKET=
+        AWS_USE_PATH_STYLE_ENDPOINT=false
+
+        PUSHER_APP_ID=
+        PUSHER_APP_KEY=
+        PUSHER_APP_SECRET=
+        PUSHER_APP_CLUSTER=mt1
+
+        MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
+        MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+        EOF
 
     - name: Generate application key
       run: php artisan key:generate
