--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -93,7 +93,7 @@ jobs:
         username: ${{ secrets.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
         local-dir: ./
-        server-dir: ./  # Sube a la raíz para reemplazar WordPress
+        server-dir: ./public_html/  # Sube a public_html
         exclude: |
           **/.git*
           **/.git*/**
