Fix image uploads and subscription seeder
- Add storage:link to workflow for image uploads
- Fix SubscriptionSeeder to handle duration_months properly

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -73,12 +73,10 @@ jobs:
         # Ensure proper line endings
         dos2unix .env || true
 
-    - name: Optimize Laravel (Optional - commented out due to parsing issues)
+    - name: Setup storage link
       run: |
-        # php artisan config:cache
-        # php artisan route:cache
-        # php artisan view:cache
-        echo "Skipping Laravel optimization due to .env parsing issues"
+        php artisan storage:link
+        echo "Storage link created for file uploads"
 
     - name: Install Node dependencies
       run: npm install
