--- a/public/.htaccess
+++ b/public/.htaccess
@@ -14,6 +14,10 @@
     RewriteCond %{REQUEST_URI} (.+)/$
     RewriteRule ^ %1 [L,R=301]
 
+    # Handle storage files
+    RewriteCond %{REQUEST_URI} ^/storage/
+    RewriteRule ^(.*)$ - [L]
+
     # Send Requests To Front Controller...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
