deploy action con ftp 2

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -104,6 +104,8 @@ jobs:
         exclude: |
           **/.git*
           **/.git*/**
+          **/.cursor/**
+          .cursor/
           **/node_modules/**
           **/.env.example
           **/public/storage/**
