--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -24,6 +24,36 @@ jobs:
       - name: Build project
         run: npm run build
 
+      - name: Debug FTP Configuration
+        run: |
+          echo "Checking FTP configuration..."
+          if [ -z "${{ secrets.FTP_SERVER }}" ]; then
+            echo "❌ ERROR: FTP_SERVER secret is not set or is empty"
+            exit 1
+          else
+            echo "✅ FTP_SERVER is set"
+            # Mostrar solo los primeros y últimos caracteres para debug (sin exponer todo)
+            SERVER="${{ secrets.FTP_SERVER }}"
+            echo "Server format check: starts with 'ftp://' or 'http://'? (should be NO)"
+            if [[ "$SERVER" == ftp://* ]] || [[ "$SERVER" == http://* ]]; then
+              echo "⚠️  WARNING: Server should NOT include protocol (ftp:// or http://)"
+              echo "   Remove 'ftp://' or 'http://' from FTP_SERVER secret"
+            fi
+          fi
+          if [ -z "${{ secrets.FTP_USERNAME }}" ]; then
+            echo "❌ ERROR: FTP_USERNAME secret is not set or is empty"
+            exit 1
+          else
+            echo "✅ FTP_USERNAME is set"
+          fi
+          if [ -z "${{ secrets.FTP_PASSWORD }}" ]; then
+            echo "❌ ERROR: FTP_PASSWORD secret is not set or is empty"
+            exit 1
+          else
+            echo "✅ FTP_PASSWORD is set"
+          fi
+          echo "FTP_PORT: ${{ secrets.FTP_PORT || 21 }}"
+
       - name: Deploy to FTP
         uses: SamKirkland/FTP-Deploy-Action@v4.3.5
         with:
