--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "vite": "^5.0.10"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.20",
+    "@fullcalendar/daygrid": "^6.1.20",
+    "@fullcalendar/interaction": "^6.1.20",
     "svelte-routing": "^2.12.0"
   }
 }
