--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fullcalendar/core": "^6.1.20",
     "@fullcalendar/daygrid": "^6.1.20",
     "@fullcalendar/interaction": "^6.1.20",
+    "chart.js": "^4.5.1",
     "svelte-routing": "^2.12.0"
   }
 }
